# ForeSeqs

./: .gitignore  AUTHORS  Makefile  Makefile.am  README  README.md  configure.ac
examples/: alignment  partitions.2  tree.4
libpll/include/: globalVariables.h  pll.h  pllInternal.h
m4/: Makefile.am  acx_cov.m4
man/: Makefile.am  foreseqs.1
src/: Alignment.cpp  Alignment.h  DnaModel.cpp  DnaModel.h  ForeSeqs.cpp  Makefile.am  Model.cpp  Model.h  Phylo.cpp  Phylo.h  Predictor.cpp  Predictor.h  ProteinModel.cpp  ProteinModel.h  SeqPred.cpp  Utils.cpp  Utils.h
testdata/: alignment  alignment.2b  alignment.4  partitions.2  tree
